Complete draft of generating mask from flats using ccdmask

--- a/notebooks/04.02-Creating-a-mask.ipynb
+++ b/notebooks/04.02-Creating-a-mask.ipynb
@@ -25,12 +25,16 @@
     "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
+    "from astropy import units as u\n",
     "from astropy.nddata import CCDData\n",
     "\n",
     "import ccdproc as ccdp\n",
     "from photutils import detect_sources\n",
-    "from astrowidgets import ImageWidget"
+    "from astrowidgets import ImageWidget\n",
+    "\n",
+    "from convenience_functions import show_image, image_snippet"
    ]
   },
   {
@@ -44,7 +48,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ccdproc function [ccdmask](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.ccdmask.html#ccdproc.ccdmask) uses an method that is based on the [IRAF task ccdmask](http://stsdas.stsci.edu/cgi-bin/gethelp.cgi?ccdmask). The method works best when the input image used to detect flaws in the CCD is the ratio of two flat frames with different exposure times. That may or may not be available depending on what images are collected. In the example below, which uses images from Example 2 in the reduction notebooks, the two extreme exposure times are 1 sec and 1.2 sec, which is not ideal. \n",
+    "The ccdproc function [ccdmask](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.ccdmask.html#ccdproc.ccdmask) uses an method that is based on the [IRAF task ccdmask](http://stsdas.stsci.edu/cgi-bin/gethelp.cgi?ccdmask). The method works best when the input image used to detect flaws in the CCD is the ratio of two flat frames with different counts. That may or may not be available depending on what images are collected. \n",
+    "\n",
+    "In the example below, which uses images from Example 2 in the reduction notebooks, the two extreme exposure times are 1 sec and 1.2 sec, but the average counts in the images differ by 10,000. These were twilight flats taken just after sunset.\n",
+    "\n",
+    "Even with dome flats where the illumination is supposed to be constant the counts may actually vary. If they do not, use a single flat for identifying bad pixels instead of a ratio.\n",
     "\n",
     "We begin by creating an image collection and then the information for all of the calibrated, uncombined, flat images."
    ]
@@ -108,6 +116,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ratio is roughly 0.85:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio.data.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running `ccdmask` takes a little time but only needs to be done once, not once for each image. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -121,10 +152,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The result of `ccdmask` is one where there is a defect and zero where the chip is good, which matches the format of the mask numpy expects.\n",
+    "\n",
+    "The input image and derived mask are shown below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(40, 20))\n",
+    "\n",
+    "show_image(ratio, cmap='gray', fig=fig, ax=axes[0], show_colorbar=False)\n",
+    "axes[0].set_title('Ratio of two flats')\n",
+    "\n",
+    "show_image(maskr, cmap='gray', fig=fig, ax=axes[1], show_colorbar=False)\n",
+    "axes[1].set_title('Derived mask')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two comments are in order:\n",
+    "\n",
+    "+ The \"starfish\" pattern in the first image is an artifact of the camera shutter. Ideally, a longer exposure time would be used for the flats to avoid this.\n",
+    "+ It appear at first glance that there were no pixels masked. The problem is that the masked regions are very small and, at the scale shown, happen to not be visible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two defects in this CCD are shown below. The first is a small patch of pixels that are vastly less sensitive than the rest. The second is a column on the left edge of the CCD. It turns out this column is not actually exposed to light. `ccdmask` correctly identifies both patches as bad. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 2, figsize=(10, 10))\n",
+    "\n",
+    "width = 100\n",
+    "center = (3823, 2446)\n",
+    "plot_row = 0\n",
+    "\n",
+    "image_snippet(ccd1, center, width=width, fig=fig, axis=axes[plot_row, 0])\n",
+    "axes[plot_row, 0].set_title('Flat, camera defect')\n",
+    "\n",
+    "image_snippet(maskr, center, width=width, fig=fig, axis=axes[plot_row, 1], is_mask=True)\n",
+    "axes[plot_row, 1].set_title('Mask, same center')\n",
+    "\n",
+    "center = (0, 2048)\n",
+    "plot_row = 1\n",
+    "\n",
+    "image_snippet(ccd1, center, width=width, fig=fig, axis=axes[plot_row, 0], percu=99.9, percl=70)\n",
+    "axes[plot_row, 0].set_title('Flat, bad column')\n",
+    "\n",
+    "image_snippet(maskr, center, width=width, fig=fig, axis=axes[plot_row, 1], is_mask=True)\n",
+    "axes[plot_row, 1].set_title('Mask, same center')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## STILL TO DISCUSS:\n",
     "\n",
-    "+ Bad spot at `iw.center_on((3823, 2446))`\n",
-    "+ Bad column at left edge\n",
+    "+ ~~Bad spot at `iw.center_on((3823, 2446))`~~\n",
+    "+ ~~Bad column at left edge~~\n",
     "+ hot pixel?? at `iw.center_on((3016, 3930))`"
    ]
   },
@@ -132,30 +232,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Current thoughts\n",
+    "### Saving the mask\n",
     "\n",
-    "Ways to make a mask:\n",
+    "The mask can be saved in a FITS file as an image. We will see in [the summary notebook on masking]() how to combine the mask generated here with a mask generated from the dark current and with a cosmic ray mask for each science image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_as_ccd = CCDData(data=maskr.astype('uint8'), unit=u.dimensionless_unscaled)\n",
+    "mask_as_ccd.header['imagetyp'] = 'flat mask'\n",
+    "mask_as_ccd.write(ex2_path / 'mask_from_ccdmask.fits')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making the mask with a single flat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The flats we used in Example 1, taken with the Large Format Camera at Palomar, are dome flats taken with nearly constant illumination. In that case the best we can do is run `ccdmask` on a single flat image. As we will see, this still allows the identification of several clearly bad areas of the chip.\n",
     "\n",
-    "+ `ccdmask`, IRAF-inspired, looks for pixels that stand out in ratio of flat frames. **Issue:** current example 2 has very short range of exposure times (1 - 1.2) which is likely not ideal.\n",
-    "+ High dark current pixels. In this set of images the pixel `(3016, 3930)` is an excellent example. it shows up as hot in the master dark, it shows up as hot in the 1000 sec dark exposure, and it turns into a \"dark\" pixel in the reduced images because dark is over-subtracted.\n",
-    "+ Cosmic ray detection. This finds single pixels (should these be kept???), actual cosmic rays, and, it turns out, odd things like stars that snuck into the darks 🤦‍♂️. **Issue:** There are stars in the darks for this night. Am inclined to keep using this night anyway and discuss/point them out.\n",
-    "+ Some combination of the above. There is *not* huge overlap between them. **See near end of this notebook for support of this.** Not sure how many of the single-pixel \"cosmic rays\" are really cosmic rays.\n",
+    "First, a look at the calibratted, but not combined, flat images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex1_path = Path('example1-reduced')\n",
     "\n",
-    "When to create the mask:\n",
+    "ifc1 = ccdp.ImageFileCollection(ex1_path)\n",
     "\n",
-    "+ At the end. Adding the mask to each file takes up *a lot* of space and isn't really needed if the procedures in this guide are followed because extreme pixels are rejected during reduction anyway. \n",
-    "+ Once you have everything in hand constructing a mask is easier.\n",
-    "+ Can't really do any overall mask (as opposed to frame-by-frame) because the cosmic ray mask varies from image to image (mostly).\n",
+    "flats = (ifc1.summary['imagetyp'] == 'FLATFIELD') & (ifc1.summary['combined'] != True)\n",
+    "ifc1.summary[flats]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can double check that a ratio of flats will not be useful by calculating the mean counts in each flat image:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ccs = []\n",
     "\n",
-    "Do you need to create a mask?\n",
+    "for c in ifc1.ccds(imagetyp='flatfield', filter=\"g'\"):\n",
+    "    if 'combined' in c.header:\n",
+    "        continue\n",
+    "    print(c.data.mean())\n",
+    "    ccs.append(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The variation in counts is so small that the ratio of two flats will not be useful. \n",
     "\n",
-    "+ Beats me. Lots of people don't, I gather. Worst case they introduce noise into your measurements, but some of that can be eliminated by sigma clipping the result and/or tossing out extreme points.\n",
-    "+ OTOH, if you do have one you can sensibly reject points from either annulus or aperture (or exclude measurements when bad pixel is in aperture or whatever).\n",
+    "Instead, we run `ccdmask` on the first flat. There is nothing special about that one. The kind of defects that `ccdmask` tries to identify are in the CCD sensor itself and should be the same for all filters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "ccs1_mask = ccdp.ccdmask(ccs[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Displaying the flat we used and the mask side-by-side demonstrates that the defects which are clear in the flat are picked up in the mask."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(15, 10))\n",
     "\n",
-    "Cool things:\n",
+    "show_image(ccs[0], cmap='gray', fig=fig, ax=axes[0])\n",
+    "axes[0].set_title('Single calibrated flat')\n",
     "\n",
-    "+ Using `photutils` to generate segmentation maps from the mask is awesome. Makes it much easier to assess the cosmic ray detection and to view big bad spots from `ccdmask`.\n",
-    "+ Couple that with the image viewer and joy is to be had!"
+    "show_image(ccs1_mask, cmap='gray', fig=fig, ax=axes[1], is_mask=False)\n",
+    "axes[1].set_title('Derived mask');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A couple of cutouts are shown below illustrating some of the individual defects identified."
    ]
   },
   {
@@ -164,327 +354,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask1 = ccdp.ccdmask(ccd1)"
+    "fig, axes = plt.subplots(2, 2, figsize=(10, 10))\n",
+    "\n",
+    "width = 300\n",
+    "center = (512, 3976)\n",
+    "plot_row = 0\n",
+    "\n",
+    "image_snippet(ccs[0], center, width=width, fig=fig, axis=axes[plot_row, 0])\n",
+    "axes[plot_row, 0].set_title('Flat, partial bad column')\n",
+    "\n",
+    "image_snippet(ccs1_mask, center, width=width, fig=fig, axis=axes[plot_row, 1], is_mask=True)\n",
+    "axes[plot_row, 1].set_title('Mask, same center')\n",
+    "\n",
+    "center = (420, 3250)\n",
+    "width = 100\n",
+    "plot_row = 1\n",
+    "\n",
+    "image_snippet(ccs[0], center, width=width, fig=fig, axis=axes[plot_row, 0])\n",
+    "axes[plot_row, 0].set_title('Flat, bad patch')\n",
+    "\n",
+    "image_snippet(ccs1_mask, center, width=width, fig=fig, axis=axes[plot_row, 1], is_mask=True)\n",
+    "axes[plot_row, 1].set_title('Mask, same center')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw = ImageWidget()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mccd1 = CCDData(data=mask1, unit='adu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw.load_array(mask1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "maskr.sum(), mask1.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw.load_array(maskr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw.load_nddata(ratio)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw.center_on((3824, 2450))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x, y = np.where(maskr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "segm = detect_sources(maskr, 0.5, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "segm.slices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmp = segm.cmap()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "segm.data.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#iw.load_array(segm.data)\n",
-    "iw.load_array(maskr)\n",
-    "#iw.load_array(dmask)\n",
-    "#iw.load_array(dark1000.data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Known bad spot in the chip\n",
-    "iw.center_on((3823, 2446))\n",
-    "# This is a hot pixel that clearly shows up as a dark spot in other images\n",
-    "# i.e. it is not well-modeled by the dark frames.\n",
-    "iw.center_on((3016, 3930))\n",
-    "iw.zoom_level = 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dark1000 = CCDData.read('master_dark_exposure_1000.0.fit')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dark1000 = dark1000.divide(1000).multiply(1.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dmask = dark1000.data[:, :4096] > 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dmask.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "in_both = dmask | maskr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "in_both.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "maskr.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw.load_array(in_both)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "in_both.sum() / 4096**2 * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "maskd_from_cm = ccdp.ccdmask(dark1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "maskd_from_cm.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kelt16_with_cr = CCDData.read(ex2_path / 'kelt-16-with-cr-mask.fits')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cr_mask = kelt16_with_cr.mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cr_mask.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "only_in_cr = cr_mask & ~maskr & ~dmask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "only_in_cr.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
