--- a/notebooks/03.03-Identifying-hot-pixels.ipynb
+++ b/notebooks/03.03-Identifying-hot-pixels.ipynb
@@ -11,15 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Graph distribution of pixel values?\n",
-    "\n",
-    "Yeah, and maybe show distribution from a 90-second dark and a 1000-second dark."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Some pixels are too hot\n",
     "\n",
     "Recall from the [notebook about dark current](03.02-Real-dark-current-noise-and-other-artifacts.ipynb) that even  a cryogenically-cooled camera with low dark current has some pixels with much higher dark current. In the [discussion of \"ideal\" dark current](03.01-Dark-current-The-ideal-case.ipynb) we noted that the counts in a dark image should be proportional to the exposure time. \n",
@@ -35,6 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -73,7 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dark_90 = CCDData.read('example2-reduced/combined_dark_90.000.fit')\n",
+    "ex2_path = Path('example2-reduced')\n",
+    "\n",
+    "dark_90 = CCDData.read(ex2_path / 'combined_dark_90.000.fit')\n",
     "dark_1000 = CCDData.read('master_dark_exposure_1000.0.fit.bz2')\n",
     "dark_1000 = ccdp.trim_image(dark_1000[:, :4096])\n",
     "\n",
@@ -125,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hots = (dark_1000.data > 1)"
+    "hot_pixels = (dark_1000.data > 1)"
    ]
   },
   {
@@ -135,7 +130,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 10))\n",
-    "plt.plot(dark_90.data[hots].flatten(), dark_1000.data[hots].flatten(), '.', alpha=0.2, label='Data')\n",
+    "plt.plot(dark_90.data[hot_pixels].flatten(), dark_1000.data[hot_pixels].flatten(), '.', alpha=0.2, label='Data')\n",
     "plt.xlabel(\"dark current ($e^-$/sec), 90 sec exposure time\")\n",
     "plt.ylabel(\"dark current ($e^-$/sec), 1000 sec exposure time\")\n",
     "plt.plot([0, 100], [0, 100], label='Ideal relationship')\n",
@@ -159,7 +154,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 10))\n",
-    "plt.plot(dark_90.data[hots].flatten(), dark_1000.data[hots].flatten(), '.', alpha=0.2, label='Data')\n",
+    "plt.plot(dark_90.data[hot_pixels].flatten(), dark_1000.data[hot_pixels].flatten(), '.', alpha=0.2, label='Data')\n",
     "plt.xlabel(\"dark current ($e^-$/sec), 90 sec exposure time\")\n",
     "plt.ylabel(\"dark current ($e^-$/sec), 1000 sec exposure time\")\n",
     "plt.plot([0, 100], [0, 100], label='Ideal relationship')\n",
@@ -170,12 +165,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "hots.sum()"
+    "Here it looks like the measured dark currents are consistent until around 4$e^-$/sec. Beyond that the dark current is consistently larger in the short exposure than in the long exposure. \n",
+    "\n",
+    "Because of this, we will mark all pixels with dark current larger than 4$e^-$/sec as bad. Below that the dark current seems to be measured consistently in both exposures so it ought to be possible to remove the dark current by subtracting a combined dark frame."
    ]
   },
   {
@@ -184,7 +179,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "super_hots = (dark_1000.data > 4)"
+    "bad_hot_pixels = (dark_90.data > 4)\n",
+    "bad_hot_pixels.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This amounts to 4302 pixels, or 0.026% of the pixels in the camera."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rule of thumb\n",
+    "\n",
+    "The example in this notebook is a little unusual in that a very long exposure dark is available. In deciding what pixels to mask because of high dark current you have a few options:\n",
+    "\n",
+    "+ Use whatever exposure time range you have. The images in \"Example 1\" from the previous notebook have darks with exposure times 7, 70 and 300 seconds. The 7 second dark is primarily measuring read noise, so is not likely to be useful. The current in the 70 second and 300 second darks could be compared, though, as it was in this case.\n",
+    "+ If that is not an option, as was the case in the data in \"Example 2\", then you may need to pick a cut off. Keep in mind that the typical camera has very, very low dark current, so a limit like 1$e^-$/sec is not unreasonable.\n",
+    "+ Ask other users of the instrument what they do. Large observatories may provide a a mask image of bad pixels for the camera you are using.\n",
+    "+ Do not do any masking. This is a more reasonable option than you might think. Most pixels are measuring light from the night time sky. If one of these hot pixels happens to be in that background, and outlying pixels are rejected by a method like sigma clipping, then these hot pixels will be excluded from your analysis. If the object of interest happens to fall on one the bad pixels you may well notice it. In time series photometry this sometimes manifests as a single data point that is well outside the trend in the rest of the data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving the mask\n",
+    "\n",
+    "The mask can be saved as in a FITS file. We will see in the notebook [XXX]() how to include this mask. Casting the mask as an unsigned integer is necessary because FITS cannot store boolean data."
    ]
   },
   {
@@ -193,136 +219,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "super_hots.sum()"
+    "mask_as_ccd = CCDData(data=bad_hot_pixels.astype('uint8'), unit=u.dimensionless_unscaled)\n",
+    "mask_as_ccd.header['imagetyp'] = 'dark mask'\n",
+    "mask_as_ccd.write(ex2_path / 'mask_from_dark_current.fits')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_ran = 10_000\n",
-    "randos_x = np.random.randint(0, 4095, n_ran)\n",
-    "randos_y = np.random.randint(0, 4095, n_ran)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "randos.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dark_90.data[randos_x, randos_y].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.plot(dark_90.data[randos_x, randos_y].flatten(), dark_1000.data[randos_x, randos_y].flatten(), '.', alpha=0.1)\n",
-    "plt.xlabel(\"dark current, 90 sec exposure time\")\n",
-    "plt.ylabel(\"1000 sec exposure time\")\n",
-    "plt.plot([0, 100], [0, 100])\n",
-    "plt.grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read_90 = 10 / np.sqrt(10) / 90\n",
-    "read_90"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "hist(dark_90.data[randos_x, randos_y].flatten(), bins=5000, density=True)\n",
-    "plt.vlines([read_90, 2 * read_90], 0, 1)\n",
-    "plt.grid();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read_1000 = 10 /np.sqrt(100) / 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read_1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d_fu = CCDData(dark_90, dtype='float32')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d_fu.dtype = np.float32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d_fu.data = d_fu.data.astype('float32')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d_fu.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
