--- a/notebooks/07.00-Combining-images.ipynb
+++ b/notebooks/07.00-Combining-images.ipynb
@@ -4,11 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Combining images\n"
+    "# Combining images\n",
+    "\n",
+    "An overview of combining images is in [Image combination](01.06-Image-combination.ipynb). The next sections discuss a couple of common cases not covered the earlier section:\n",
+    "\n",
+    "+ Combining science images without aligning them to generate *sky flats*. These flats have the advantage that the light source exactly matches the spectrum of the night sky. They have the big disadvantage that the sky counts are typically very low so many, many images need to be combined to produce a reasonably low noise flat frame.\n",
+    "+ Combining science images by aligning them using WCS information if it is present in the headers of the images."
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
