--- a/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
+++ b/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "## Impact of combining images on noise\n",
     "\n",
-    "As discussed at length in the [notebook on combination](01.06-Image-combination.ipynb), the reason for taking and combining several calibration images is to reduce the noise if the images used for calibration. The difference between a single image and a combination of images is apparent in the images above. Another way to see the impact of combining images in the histogram of pixel values. Notice that the distribution of values is much narrower for the combined image than for a single bias. Pixels near the edges, where the amplifier glow is large, are binned separately from the rest of the pixels to emphasize the uniformity of the chip away from the glow."
+    "As discussed at length in the [notebook on combination](01-06-Image-combination.ipynb), the reason for taking and combining several calibration images is to reduce the noise if the images used for calibration. The difference between a single image and a combination of images is apparent in the images above. Another way to see the impact of combining images in the histogram of pixel values. Notice that the distribution of values is much narrower for the combined image than for a single bias. Pixels near the edges, where the amplifier glow is large, are binned separately from the rest of the pixels to emphasize the uniformity of the chip away from the glow."
    ]
   },
   {
